tests/NormalTests/paczka1/fuzzy1/67424142.err
Error in line 21: A750 A750 37,1
Error in line 31: QGE83MHx A134 81,2
